unpackaged/main/default/objects/Contact/fields/TextAreaLong__c.field-meta.xml
<CustomField>
        <fullName>TextAreaLong__c</fullName>
        <label>TextAreaLong</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </CustomField>