unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </ListView>